[package]
name = "chem-rs"
version = "0.1.0"
authors = ["Thor Correia <thor.lucas@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { git = "https://github.com/petgraph/petgraph" }
nom = "6.0.1"
enum-utils = "0.1.2"
